gladi kotor sidang

--- a/config.yml
+++ b/config.yml
@@ -5,23 +5,22 @@ assistant_id: 20240325-133028-wooden-bosun
 language: "id"
 
 pipeline:
-- name: WhitespaceTokenizer
-  "intent_tokenization_flag": False
-  "intent_split_symbol": "_"
-  "token_pattern": None
-- name: CountVectorsFeaturizer
-  analyzer: char_wb
-  min_ngram: 1
-  max_ngram: 4
-- name: DIETClassifier
-  epochs: 100
-  constrain_similarities: True
-- name: ResponseSelector
-  epochs: 100
-  constrain_similarities: True
-- name: FallbackClassifier
-  threshold: 0.3
-  ambiguity_threshold: 0.1
+  - name: WhitespaceTokenizer
+  - name: RegexFeaturizer
+  - name: LexicalSyntacticFeaturizer
+  - name: CountVectorsFeaturizer
+  - name: CountVectorsFeaturizer
+    analyzer: "char_wb"
+    min_ngram: 1
+    max_ngram: 4
+  - name: DIETClassifier
+    epochs: 100
+  - name: ResponseSelector
+    epochs: 100
+    constrain_similarities: True
+  - name: FallbackClassifier
+    threshold: 0.3
+    ambiguity_threshold: 0.1
 
 policies:
 - name: MemoizationPolicy
