--- a/config.yml
+++ b/config.yml
@@ -6,8 +6,6 @@ language: "id"
 
 pipeline:
   - name: WhitespaceTokenizer
-  - name: RegexFeaturizer
-  - name: LexicalSyntacticFeaturizer
   - name: CountVectorsFeaturizer
   - name: CountVectorsFeaturizer
     analyzer: "char_wb"
@@ -18,6 +16,7 @@ pipeline:
   - name: ResponseSelector
     epochs: 100
     constrain_similarities: True
+  - name: EntitySynonymMapper
   - name: FallbackClassifier
     threshold: 0.3
     ambiguity_threshold: 0.1
